engine/codex-rs/tui/src/snapshots/codex_tui__oss_selection__presentation_tests__oss_providers_unknown_narrow.snap
---
source: tui/src/oss_selection_tests.rs
expression: terminal.backend()
---

  Select an open-source provider
  Choose a local AI server for this
  session.

› 1. LM Studio · ? Unknown              
  2. Ollama · ? Unknown

  Local LM Studio server (default port
  1234)

  ↑/↓ choose · enter select · esc LM
  Studio · ctrl+c exit
